--- a/404.html
+++ b/404.html
@@ -9,13 +9,13 @@
 <meta name="color-scheme" content="light dark"><meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://example.org/404.html" />
+<meta property="og:url" content="http://smjune.github.com/Webdoploy/404.html" />
 <title>404 Page not found | My New Hugo Site</title>
-<link rel="manifest" href="/manifest.json">
-<link rel="icon" href="/favicon.png" type="image/x-icon">
-<link rel="stylesheet" href="/book.min.c58292d36b18b675680ab9baea2029204537b839ea72f258746ec0f32ce8d6c8.css" integrity="sha256-xYKS02sYtnVoCrm66iApIEU3uDnqcvJYdG7A8yzo1sg=" crossorigin="anonymous">
-  <script defer src="/flexsearch.min.js"></script>
-  <script defer src="/en.search.min.a661a8e4c9b0cb98ec22ecd51bf4a6171ee607f5eb0a41fcab71f11e2ffc62fe.js" integrity="sha256-pmGo5Mmwy5jsIuzVG/SmFx7mB/XrCkH8q3HxHi/8Yv4=" crossorigin="anonymous"></script>
+<link rel="manifest" href="/Webdoploy/manifest.json">
+<link rel="icon" href="/Webdoploy/favicon.png" type="image/x-icon">
+<link rel="stylesheet" href="/Webdoploy/book.min.c58292d36b18b675680ab9baea2029204537b839ea72f258746ec0f32ce8d6c8.css" integrity="sha256-xYKS02sYtnVoCrm66iApIEU3uDnqcvJYdG7A8yzo1sg=" crossorigin="anonymous">
+  <script defer src="/Webdoploy/flexsearch.min.js"></script>
+  <script defer src="/Webdoploy/en.search.min.6cf6c6e934dcf3802b78a047811e5376f1dc779a44dace76a7340b323c7659df.js" integrity="sha256-bPbG6TTc84AreKBHgR5TdvHcd5pE2s52pzQLMjx2Wd8=" crossorigin="anonymous"></script>
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
@@ -40,7 +40,7 @@ https://github.com/alex-shpak/hugo-book
         <h1>404</h1>
         <h2>Page Not Found</h2>
         <h3>
-          <a href="/">My New Hugo Site</a>
+          <a href="/Webdoploy/">My New Hugo Site</a>
         </h3>
       </div>
     </main>
